--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Deploy to Heroku
       uses: AkhileshNS/heroku-deploy@v3.12.12
       with:
-        heroku_api_key: ${{HEROKU_API_KEY}}
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_email: anantbarthwal@gmail.com
         heroku_app_name: github-weather
       
